# fund-watch

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  start.ps1  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pull_quotes.py  pyproject.toml  requirements.txt  run.py
backend/app/: auth.py  core.py  db.py  fund_source.py  holidays.py  main.py  ocr_service.py  schemas.py
backend/app/repositories/: funds_repo.py  nav_history_repo.py  ocr_repo.py  portfolios_repo.py  positions_repo.py  snapshot_repo.py  stock_industry_repo.py  tx_repo.py
backend/app/routers/: ai.py  dca.py  funds.py  health.py  market.py  ocr.py  portfolio.py  portfolios.py  quotes.py  stocks.py  transactions.py
backend/app/services/: ai_agent.py  ai_select.py  dca.py  fund_import.py  holdings.py  metrics.py  nav_history.py  ocr_pipeline.py  portfolio_service.py  snapshots.py  stock_industry_service.py
backend/src/fund_watch/: __init__.py  main.py
backend/src/fund_watch/models/: __init__.py  schemas.py
backend/src/fund_watch/repositories/: __init__.py  fund_repo.py
backend/src/fund_watch/routers/: __init__.py  funds.py  health.py  import_.py  market.py
backend/src/fund_watch/services/: __init__.py  fund_service.py  import_service.py  quote_service.py
backend/tests/: __init__.py  client.py  conftest.py  test_api.py
backend/tests/integration/: test_api.py  test_app_api.py  test_auth.py  test_import_api.py  test_market_api.py  test_ocr_api.py  test_repository_layer.py  test_stocks_api.py
backend/tests/unit/: test_db_migration.py  test_env.py  test_fund_holdings_parse.py  test_fund_source_cache.py  test_fund_source_retry.py  test_holdings_pnl.py  test_holidays.py  test_import_service.py  test_industry.py  test_name_match.py  test_nav_history_repo.py  test_nav_history_service.py  test_nav_history_timezone.py  test_ocr_slicing.py  test_ocr_text.py  test_portfolio_summary_degrade.py  test_pull_quotes.py  test_repository.py  test_snapshot_prune.py
docs/: MANUAL.md  REVIEW_PLAN.md  REVIEW_REPORT.md  ROADMAP.md  install.md
docs/plans/: 2026-03-03-business-rationalization-design.md  2026-03-03-business-rationalization.md  2026-03-03-sector-position-design.md  2026-03-03-sector-position.md  2026-03-03-trend-chart-design.md  2026-03-03-trend-chart.md  2026-03-10-code-review-issues.md  2026-03-10-fund-detail-transactions-design.md  2026-03-10-fund-detail-transactions.md  2026-03-11-dca-design.md  2026-03-11-dca.md  2026-07-06-tx-form-and-qdii-holdings-design.md  2026-07-06-tx-form-and-qdii-holdings.md  2026-07-07-ci-docker-design.md  2026-07-07-ci-docker.md  2026-07-09-format-tooling-design.md  2026-07-09-format-tooling.md  2026-07-09-ty-typechecker-design.md  2026-07-09-ty-typechecker.md  2026-07-21-nav-history-base.md
docs/plans/templates/: design-template.md  tasks-template.md
docs/superpowers/plans/: 2026-06-25-risk-metrics.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  routes.tsx  styles.css
frontend/src/components/: AddFundModal.tsx  Checkbox.tsx  DcaPlanModal.tsx  HoldingEditModal.tsx  ImportPreview.tsx  Layout.tsx  Modal.tsx  PageState.tsx
frontend/src/components/add-fund/: BatchTab.tsx  CodeTab.tsx  SearchTab.tsx
frontend/src/components/fund-detail/: AssetAllocationCard.tsx  DcaSection.tsx  NavChart.tsx  RiskMetrics.tsx  SignalGauge.tsx  StageReturns.tsx  TopHoldings.tsx  TransactionsCard.tsx
frontend/src/components/import/: ImportRow.tsx  OcrProgress.tsx
frontend/src/components/layout/: AiConfigSetting.tsx  ColorSchemeSetting.tsx  CronStatusBadge.tsx  SettingsDropdown.tsx  TokenSetting.tsx
frontend/src/components/portfolio/: AllocationPie.tsx  BatchBar.tsx  Checkbox.tsx  DataTable.tsx  FundTableCard.tsx  HoldingsTable.tsx  HoldingsXray.tsx  PortfolioSwitcher.tsx  SortHead.tsx  StatsCards.tsx  TransactionModal.tsx  TrendChart.tsx  WatchTable.tsx
frontend/src/lib/: api-client.ts  api-endpoints.ts  api-types.ts  api.ts  color-context.tsx  fund-metrics.check.ts  fund-metrics.ts  hooks.ts  parse-batch-input.ts  portfolio-context.tsx  provider-config.tsx  queries.ts  storage.ts  utils.ts
frontend/src/pages/: AiSelect.tsx  Dashboard.tsx  Dca.tsx  FundDetail.tsx  FundExplorer.tsx  ImportPage.tsx  Market.tsx  OcrImport.tsx  Portfolio.tsx  StockFunds.tsx
frontend/src/services/: config.ts  import.ts
frontend/src/styles/: index.css
frontend/src/test/: api-client.test.ts  batch-tab.test.tsx  env.test.ts  import.test.tsx  setup.ts
frontend/tests-e2e/: smoke.spec.ts
planning/: Implementation.md  task.md  workthrough.md
