[project]
name = "fund-watch"
version = "0.1.0"
description = "A-share fund valuation monitoring and portfolio management"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.0",
    "cachetools>=5.5.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.0",
    "anthropic>=0.112.0",
    "openai>=2.44.0",
    "paddleocr>=3.5",
    "paddlepaddle>=3.2.2,<3.3.0",
    # paddlex 运行时 import cv2 但未声明依赖(其 ocr-core extra 未启用),必须显式提供
    "opencv-python-headless>=4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    # ty 处于 0.0.x,版本间可能有破坏性变更,钉死;升级时人工过一遍新诊断
    "ty==0.0.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations — 承接原 mypy strict 的强制标注约束(仅 app/)
]
ignore = [
    "ANN401",  # 显式 Any 是允许的(extract_json 等 JSON 边界场景)
]

[tool.ruff.lint.per-file-ignores]
# 强制标注只约束 app/;测试与脚本由 ty 渐进式检查覆盖即可
"tests/**" = ["ANN"]
"run.py" = ["ANN"]
"pull_quotes.py" = ["ANN"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/File() default-arg pattern is idiomatic, not a mutable-default bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[dependency-groups]
dev = [
    "types-cachetools>=7.0.0.20260518",
]
